syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.taskmanagement.taskbackend.grpc";
option java_outer_classname = "UserServiceProto";

package userservice;

service UserService {
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
  rpc GetUserByUsername (GetUserByUsernameRequest) returns (UserResponse);
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string username = 2;
  string message = 3;
}

message GetUserByUsernameRequest {
  string username = 1;
}

message UserResponse {
  int64 id = 1;
  string username = 2;
  string email = 3;
  string name = 4;
}